Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/CompoundBox.out
CompoundBox.java:12:19: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: int, java.lang.Float)
1 error
